--- a/static_src/vultrainer_all.css
+++ b/static_src/vultrainer_all.css
@@ -39,6 +39,9 @@
 .label-font-blue{
     color: #337ab7!important;
 }
+.pointer{
+    cursor: pointer;
+}
 .left-radius-4{
 	border-radius: 4px 0px 0px 4px!important;
 }
