complete vulhub creation function

--- a/app/templates/vuln_container.html
+++ b/app/templates/vuln_container.html
@@ -147,29 +147,25 @@
                                     <td>
                                         <div class="visible-md visible-lg hidden-sm hidden-xs action-buttons">
                                             <a class="blue" href="#">
-                                                <i class="icon-zoom-in bigger-130"></i>
+                                                <i class="fa fa-laptop bigger-130"></i>
                                             </a>
 
                                             <a class="green" href="#">
-                                                <i class="icon-pencil bigger-130"></i>
-                                            </a>
-
-                                            <a class="red" href="#">
-                                                <i class="icon-trash bigger-130"></i>
+                                                <i class="fa fa-dot-circle-o bigger-130"></i>
                                             </a>
                                         </div>
 
                                         <div class="visible-xs visible-sm hidden-md hidden-lg">
                                             <div class="inline position-relative">
                                                 <button class="btn btn-minier btn-yellow dropdown-toggle" data-toggle="dropdown">
-                                                    <i class="icon-caret-down icon-only bigger-120"></i>
+                                                    <i class="fa fa-caret-down icon-only bigger-120"></i>
                                                 </button>
 
                                                 <ul class="dropdown-menu dropdown-only-icon dropdown-yellow pull-right dropdown-caret dropdown-close">
                                                     <li>
                                                         <a href="#" class="tooltip-info" data-rel="tooltip" title="View">
                                                             <span class="blue">
-                                                                <i class="icon-zoom-in bigger-120"></i>
+                                                                <i class="fa fa-laptop bigger-120"></i>
                                                             </span>
                                                         </a>
                                                     </li>
@@ -177,15 +173,7 @@
                                                     <li>
                                                         <a href="#" class="tooltip-success" data-rel="tooltip" title="Edit">
                                                             <span class="green">
-                                                                <i class="icon-edit bigger-120"></i>
-                                                            </span>
-                                                        </a>
-                                                    </li>
-
-                                                    <li>
-                                                        <a href="#" class="tooltip-error" data-rel="tooltip" title="Delete">
-                                                            <span class="red">
-                                                                <i class="icon-trash bigger-120"></i>
+                                                                <i class="fa fa-dot-circle-o bigger-120"></i>
                                                             </span>
                                                         </a>
                                                     </li>
