--- a/app/templates/siderbar.html
+++ b/app/templates/siderbar.html
@@ -38,15 +38,15 @@
 					</div><!-- #sidebar-shortcuts -->
 
 					<ul class="nav nav-list">
-						<li class="active">
-							<a href="index.html">
+						<li ui-sref-active="active">
+							<a ui-sref="dashboard">
 								<i class="fa fa-dashboard"></i>
 								<span class="menu-text"> 控制台 </span>
 							</a>
 						</li>
 
-						<li>
-							<a href="typography.html">
+						<li ui-sref-active="active">
+							<a ui-sref="vulnContainer">
 								<i class="fa fa-bug"></i>
 								<span class="menu-text"> 漏洞靶机 </span>
 							</a>
