--- a/app/templates/staticfiles.html
+++ b/app/templates/staticfiles.html
@@ -40,6 +40,7 @@
  <script src="{% static 'js/angular/ui-bootstrap-tpls.js' %}"></script>
  <script src="{% static 'js/angular/angular-tree-control.js' %}"></script>
  <script src="{% static 'js/angular/angular-file-upload.min.js' %}"></script>
+ <script src="{% static 'js/angular/angular-websocket.min.js' %}"></script>
 
 <!-- ace scripts -->
 <script src="{% static 'js/ace-elements.min.js' %}"></script>
