--- a/static_src/css/vulnContainer.css
+++ b/static_src/css/vulnContainer.css
@@ -20,7 +20,6 @@
 .pointer{
     cursor: pointer;
 }
-
 .output{
     background-color: #342121;
     color: #4AA629;
@@ -29,4 +28,7 @@
     border: 2px;
     border-color: #949090;
     border-radius: 3px;
+}
+.error{
+    color: #B02626!important;
 }
