--- a/static_src/vultrainer_all.css
+++ b/static_src/vultrainer_all.css
@@ -42,7 +42,6 @@
 .pointer{
     cursor: pointer;
 }
-
 .output{
     background-color: #342121;
     color: #4AA629;
@@ -51,6 +50,9 @@
     border: 2px;
     border-color: #949090;
     border-radius: 3px;
+}
+.error{
+    color: #B02626!important;
 }
 .left-radius-4{
 	border-radius: 4px 0px 0px 4px!important;
