--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -129,7 +129,7 @@
 						<div class="widget-header widget-header-flat widget-header-small">
 							<h5>
 								<i class="icon-signal"></i>
-								访问来源
+								漏洞汇总
 							</h5>
 
 							<div class="widget-toolbar no-border">
